<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_title"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_artist"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_time"
        android:textSize="14sp" />

</LinearLayout>
