<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RecyclerView
        android:id="@+id/MusicRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_needed" />

        <Button
            android:id="@+id/RequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_permission" />

        <Button
            android:id="@+id/OpenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_settings" />
    </LinearLayout>
</FrameLayout>
